<resources>
    <string name="app_name">Micro Insurance</string>

    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>

    <string name="camera">camera</string>
    <string name="home">home</string>
    <string name="profile">profile</string>

    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>

    <string name="username">Bob B.</string>
    <string name="email_field">Email:</string>
    <string name="email">bob.b@gmail.com</string>
    <string name="pass_field">Change Password</string>
    <string name="address_field">Address:</string>
    <string name="address">100 George St.</string>
    <string name="notif_field">Notifications</string>
    <string name="faq">FAQ</string>

    <string name="chev_desc">Navigation Arrow</string>
    <string name="privacy_title">Privacy</string>
    <string name="contact">Contact Us</string>

    <string name="camera_title">Your result</string>
    <string name="powered_by_aws">Powered by </string>
    <string name="result_title_hint">Enter title</string>
    <string name="save">Save</string>
    <string name="confidence_level">Confidence level</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="value">Value</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="insurapp">InsurApp</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>

    <string name="auth_failed">Authentification failed!</string>
    <string name="minimum_password">Password must be >= 6 chars</string>

</resources>
